Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,8 +67,8 @@ ansible_run:
     - URL=$(echo ${SUBMODULE_SSH_URL/$PROTO/})
     - NEW_SUBMODULEURL="${PROTO}${GITLAB_AUTH_USERNAME}:${PYPI_REGISTRY_PASSWORD}@${URL}"
     - echo $NEW_SUBMODULEURL
-    - echo $${GITLAB_AUTH_USERNAME}
-    - echo ${PYPI_REGISTRY_PASSWORD}
+    - echo ${GITLAB_AUTH_USERNAME}
+    - echo ${GITLAB_AUTH_TOKEN}
     - git submodule update --init --recursive
     #- ls
     #- pwd
