--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,8 @@ variables:
   ANSIBLE_SSH_PASS: password
   ANSIBLE_BECOME_PASS: password
   ANSIBLE_CHECK_MODE: 'true'
+  USERNAME: 'a.molaei'
+  PASSWORD: 'glpat-iNGinWxgLtmX-ymo5zDL'
 
 
 stages:
@@ -65,7 +67,7 @@ ansible_run:
     - SUBMODULE_SSH_URL=$(git config --file .gitmodules --get submodule.hostcheck.url)
     - PROTO=$(echo $SUBMODULE_SSH_URL | sed -e's,^\(.*://\).*,\1,g')
     - URL=$(echo ${SUBMODULE_SSH_URL/$PROTO/})
-    - NEW_SUBMODULEURL="${PROTO}${GITLAB_AUTH_USERNAME}:${PYPI_REGISTRY_PASSWORD}@${URL}"
+    - NEW_SUBMODULEURL="${PROTO}${USERNAME}:${PASSWORD}@${URL}"
     - echo $NEW_SUBMODULEURL
     - echo ${GITLAB_AUTH_USERNAME}
     - echo ${GITLAB_AUTH_TOKEN}
