--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,8 +69,8 @@ ansible_run:
     - URL=$(echo ${SUBMODULE_SSH_URL/$PROTO/})
     - NEW_SUBMODULEURL="${PROTO}${USERNAME}:${PASSWORD}@${URL}"
     - echo $NEW_SUBMODULEURL
-    - echo ${GITLAB_AUTH_USERNAME}
-    - echo ${GITLAB_AUTH_TOKEN}
+    - echo ${PASSWORD}
+    - echo ${USERNAME}
     - git submodule update --init --recursive
     #- ls
     #- pwd
