--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,7 @@ ansible_run:
     - PROTO=$(echo $SUBMODULE_SSH_URL | sed -e's,^\(.*://\).*,\1,g')
     - URL=$(echo ${SUBMODULE_SSH_URL/$PROTO/})
     - NEW_SUBMODULEURL="${PROTO}${USERNAME}:${PASSWORD}@${URL}"
+    - git config --file .gitmodules submodule.hostcheck.url $NEW_SUBMODULEURL
     - echo $NEW_SUBMODULEURL
     - echo ${PASSWORD}
     - echo ${USERNAME}
