--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,12 +79,7 @@ ansible_run:
     #- pwd
     - cd hostcheck
     - ls
-    #- ls
-    #- which python3
-    #- ls /usr/local/bin/python3
-    #- python3 -m venv .venv
-    #- source .venv/bin/activate
-    #- pip3 install -r requirements.txt  --default-timeout=180 --index-url=https://$PYPI_REGISTRY_USER:$PYPI_REGISTRY_PASSWORD@$PYPI_REGISTRY/repository/pypi-group1/simple
+    - pip3 install -r requirements.txt  --default-timeout=180 --index-url=https://$PYPI_REGISTRY_USER:$PYPI_REGISTRY_PASSWORD@$PYPI_REGISTRY/repository/pypi-group1/simple
     #- ansible-playbook -i ../inventory main.yml -b --extra-vars "ansible_user=$ANSIBLE_USER ansible_ssh_pass=$ANSIBLE_SSH_PASS ansible_become_pass=$ANSIBLE_BECOME_PASS ansible_check_mode=$ANSIBLE_CHECK_MODE"
   only:
     - add-ansible-runner
