--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,6 @@ ansible_run:
     - ls
     - sed -i 's/ruamel\.yaml\.clib==0\.2\.7/ruamel.yaml.clib>=0.2.7/g' requirements.txt
     - pip3 install -r requirements.txt  --default-timeout=180 --index-url=https://$PYPI_REGISTRY_USER:$PYPI_REGISTRY_PASSWORD@$PYPI_REGISTRY/repository/pypi-group1/simple
-    - ansible-playbook -i ../inventory main.yml -b --extra-vars "ansible_user=$ANSIBLE_USER ansible_ssh_pass=$ANSIBLE_SSH_PASS ansible_become_pass=$ANSIBLE_BECOME_PASS ansible_check_mode=$ANSIBLE_CHECK_MODE"
+    - /home/appuser/.local/bin/ansible-playbook -i ../inventory main.yml -b --extra-vars "ansible_user=$ANSIBLE_USER ansible_ssh_pass=$ANSIBLE_SSH_PASS ansible_become_pass=$ANSIBLE_BECOME_PASS ansible_check_mode=$ANSIBLE_CHECK_MODE"
   only:
     - add-ansible-runner
