Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ ansible_run:
   tags:
     - stage-awx-legacy
   image:
-    name: repo.asax.ir/platform/asapython:3.12.2-slim-bullseye
+    name: repo.asax.ir/platform/asapython:3.12.2-slim-bullseye@sha256:9909039a2ea379efe96a80be6cbdc90bbac1cc265287c09a5686d2d2ad672fe2
     entrypoint: [""]
   when: manual
   script:
