--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hostcheck"]
 	path = hostcheck
-	url = https://github.com/arminey77/hostcheck-sub
+	url = git@github.com:arminey77/hostcheck-sub.git
